--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hotkeys-hook": "^5.2.0",
+    "react-router-dom": "^7.9.6",
     "roughjs": "^4.6.6",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "zustand": "^5.0.8"
   },
