--- a/server/.env
+++ b/server/.env
@@ -2,11 +2,9 @@
 PORT=5004
 NODE_ENV=development
 
-# MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/excalidraw
+MONGODB_URI=mongodb+srv://deadpool:Namanarora%40123@cluster0.xnv99ew.mongodb.net/excalidraw?retryWrites=true&w=majority&appName=Cluster0
 
-# JWT Configuration
-JWT_SECRET=excalidraw_secret_key
+JWT_SECRET=abcderfgh12345678
 JWT_EXPIRE=7d
 
 # CORS Configuration
