--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,4 @@ JWT_SECRET=abcderfgh12345678
 JWT_EXPIRE=7d
 
 # CORS Configuration
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://excalidraw-1-wth9.onrender.com
